@@ -6,9 +6,9 @@ module Mail
   module Encodings
     class Base64 < SevenBit
       NAME = 'base64'
-     
+
       PRIORITY = 3
- 
+
       def self.can_encode?(enc)
         true
       end
@@ -17,7 +17,7 @@ module Mail
       def self.decode(str)
         RubyVer.decode_base64( str )
       end
-    
+
       # Encode the string to Base64
       def self.encode(str)
         ::Mail::Utilities.to_crlf(RubyVer.encode_base64( str ))
@@ -33,7 +33,7 @@ module Mail
         true
       end
 
-      Encodings.register(NAME, self)      
+      Encodings.register(NAME, self)
     end
   end
 end
