@@ -6,11 +6,11 @@ module Mail
   module Encodings
     class QuotedPrintable < SevenBit
       NAME='quoted-printable'
-   
+
       PRIORITY = 2
 
-      def self.can_encode?(str)
-        EightBit.can_encode? str
+      def self.can_encode?(enc)
+        EightBit.can_encode? enc
       end
 
       # Decode the string from Quoted-Printable. Cope with hard line breaks
@@ -26,7 +26,7 @@ module Mail
       def self.cost(str)
         # These bytes probably do not need encoding
         c = str.count("\x9\xA\xD\x20-\x3C\x3E-\x7E")
-        # Everything else turns into =XX where XX is a 
+        # Everything else turns into =XX where XX is a
         # two digit hex number (taking 3 bytes)
         total = (str.bytesize - c)*3 + c
         total.to_f/str.bytesize
