@@ -60,6 +60,7 @@ Bugs:
 * #1113 - Eliminate attachment corruption caused by CRLF conversion. (jeremy)
 * #1131 - Fix that Message#without_attachments! didn't parse the remaining parts. (jeremy)
 * #1019 - Fix b value encoder incorrectly splitting multibyte characters. (Kenneth-KT)
+* #1157 - Fix base64 attachment transfer encoding being overridden by quoted-printable. (dalibor)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
 
